network-policy/exam.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: app-to-manager
  namespace: app
spec:
  podSelector:
    matchLabels:
      id: manager
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          id: app

---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: manager-to-app
  namespace: app
spec:
  podSelector:
    matchLabels:
      id: app
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          id: manager
